--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -6,8 +6,8 @@ body {
 	font-size: 10px;
 }
 
-#header {
-	height: 120px;
+header {
+	height: 100px;
 	border-bottom: 3px solid #c0c0c0;
 	background: #204080;
 	text-align: center;
@@ -16,12 +16,12 @@ body {
 	padding: 0;
 }
 
-#header h1 {
-	padding-top: 24px;
+header h1 {
+	padding-top: 14px;
 	font-size: 250%;
 }
 
-#header a {
+header a {
 	color : #f0f0f0;
 }
 
@@ -58,8 +58,8 @@ body {
 	width: 720px;
 }
 
-#footer {
-	font-size: 50%;
+footer {
+	font-size: 80%;
 	text-align: center;
 	padding: 8px;
 	margin: 8px;
